welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: not found: type int
var biscuit : int = 0 
              ^